--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "digital/wsgi.py",
+      "src": "shop/wsgi.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
@@ -12,7 +12,7 @@
   "routers": [
     {
       "src": "/(.*)",
-      "dest": "digital/wsgi.py"
+      "dest": "shop/wsgi.py"
     }
   ]
 }
